fix(web): prevent layout shift with nav bar
# Please enter the commit message for your changes. Lines starting
# with '#' will be kept; you may remove them yourself if you want to.
# An empty message aborts the commit.
#
# Date:      Thu Dec 18 09:22:14 2025 +0100
#
# interactive rebase in progress; onto 6b52212
# Last command done (1 command done):
#    edit 7a52e74 # web: prevent layout shift with nav bar
# Next command to do (1 remaining command):
#    pick b6d810f # fix(web/getting-started): correct hello world
# You are currently editing a commit while rebasing branch 'main' on '6b52212'.
#
# Changes to be committed:
#	new file:   "\\"
#	modified:   dev/backlog.txt
#	modified:   reset.css
#

--- a/reset.css
+++ b/reset.css
@@ -4,6 +4,11 @@ body {
   padding: 0 20px;
 }
 
+/* Reserve space for async-loaded navigation to prevent layout shift */
+#nav {
+  min-height: 40px;
+}
+
 kbd {
   background-color: #eee;
   border: 1px solid #ccc;
